--- a/templates/index.html
+++ b/templates/index.html
@@ -130,10 +130,10 @@
     <button type="submit">Import Sales CSV</button>
 </form> -->
 
-<!-- <form method="POST" action="/import/inventory" enctype="multipart/form-data">
+<form method="POST" action="/import/inventory" enctype="multipart/form-data">
     <input type="file" name="file" required>
     <button type="submit">Import Inventory CSV</button>
-</form> -->
+</form>
 
 <!-- Add Item Form -->
 <form method="POST" action="/add-item" class="row g-3 justify-content-center mb-4">
